src/objects/Apttus_Proposal__DocumentCollateInfo__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Proposal__DocumentType__c</fullName>
        <description>What sort of document this record is a representation of</description>
        <inlineHelpText>What sort of document this record is a representation of</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generated Document</fullName>
                </value>
                <value>
                    <fullName>Collated Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__EmailAttachments__c</fullName>
        <description>A list of Attachment ID&apos;s used as attachments for sending email</description>
        <inlineHelpText>A list of Attachment ID&apos;s used as attachments for sending email</inlineHelpText>
        <label>Email Attachments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__FullName__c</fullName>
        <description>The full name of the document collate info</description>
        <inlineHelpText>The full name of the document collate info</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The proposal which contains the source documents</description>
        <inlineHelpText>The proposal which contains the source documents</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>CollatedDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__RelatedAttachmentId__c</fullName>
        <description>Id of the Attachment record which was automatically generated</description>
        <inlineHelpText>Id of the Attachment record which was automatically generated</inlineHelpText>
        <label>Related Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__SourceDocuments__c</fullName>
        <description>A list of Attachment ID&apos;s used to generate the final document</description>
        <inlineHelpText>A list of Attachment ID&apos;s used to generate the final document</inlineHelpText>
        <label>Source Documents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__TemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The template which was used when generating the proposal</description>
        <inlineHelpText>The template which was used when generating the proposal</inlineHelpText>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Document Collate Infos</relationshipLabel>
        <relationshipName>Document_Collate_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Collate Info</label>
    <nameField>
        <label>Document Collate Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Collate Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>